# ChangeLog for net-p2p/freenet-bin
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  20 Jan 2008; (Tommy[D]) tommy100@gmx.de -freenet-bin-0.7.1100.ebuild,
  +freenet-bin-0.7.1101.ebuild:
  New upstream release

  19 Jan 2008; (Tommy[D]) tommy100@gmx.de -freenet-bin-0.7.1099.ebuild,
  +freenet-bin-0.7.1100.ebuild:
  New upstream release

  17 Jan 2008; (Tommy[D]) tommy100@gmx.de -freenet-bin-0.7.1098.ebuild,
  +freenet-bin-0.7.1099.ebuild:
  New upstream release

  16 Jan 2008; (Tommy[D]) tommy100@gmx.de -freenet-bin-0.7.1097.ebuild,
  +freenet-bin-0.7.1098.ebuild:
  New upstream release

  06 Jan 2008; (Tommy[D]) tommy100@gmx.de freenet-bin-0.7.1097.ebuild:
  whitey

  04 Jan 2008; (Tommy[D]) tommy100@gmx.de -freenet-bin-0.7.1096.ebuild,
  +freenet-bin-0.7.1097.ebuild:
  New upstream release

  23 Dec 2007; (Tommy[D]) tommy100@gmx.de -freenet-bin-0.7.1095.ebuild,
  +freenet-bin-0.7.1096.ebuild:
  New upstream release

  22 Dec 2007; (Tommy[D]) tommy100@gmx.de freenet-bin-0.7.1095.ebuild:
  Added info for startup

  22 Dec 2007; (Tommy[D]) tommy100@gmx.de -freenet-bin-0.7.1091.ebuild,
  +freenet-bin-0.7.1095.ebuild:
  New upstream release

  16 Dec 2007; (Tommy[D]) tommy100@gmx.de -freenet-bin-0.7.1090.ebuild,
  +freenet-bin-0.7.1091.ebuild:
  New upstream release

  15 Dec 2007; (Tommy[D]) tommy100@gmx.de freenet-bin-0.7.1090.ebuild:
  Add postrm info

  15 Dec 2007; (Tommy[D]) tommy100@gmx.de -freenet-bin-0.7.1089.ebuild,
  +freenet-bin-0.7.1090.ebuild:
  New upstream release

  06 Dec 2007; (Tommy[D]) tommy100@gmx.de -freenet-bin-0.7.1088.ebuild,
  +freenet-bin-0.7.1089.ebuild:
  New upstream release

  04 Dec 2007; (Tommy[D]) tommy100@gmx.de -freenet-bin-0.7.1087.ebuild,
  +freenet-bin-0.7.1088.ebuild:
  New upstream release

  04 Dec 2007; (Tommy[D]) tommy100@gmx.de -freenet-bin-0.7.1086.ebuild,
  +freenet-bin-0.7.1087.ebuild:
  New upstream release

  03 Dec 2007; (Tommy[D]) tommy100@gmx.de -freenet-bin-0.7.1085.ebuild,