@@ -1,7 +1,7 @@
 AUX freenet 416 RMD160 95efeda98fe723027c74729b03fd293ca29bdc7a SHA1 796d336341796d081454ebcc45248e90fffaed91 SHA256 d3b665e8d619d995ef9cb67ed4006c96bc4fdf80e6b7923247e022268ab8bae5
 DIST freenet-ext.jar 2465628 RMD160 b2f428b9935c3fcb2fbfd38ef0b48a9ab8513f54 SHA1 49f4c21ef42d9b95ca2816bfa79f635e69b89bbb SHA256 caa5869e77b92bddd2416fdf8852d264fee9be49b1260281a7af4d36f8faf81f
-DIST freenet-r17168-snapshot.jar 2329448 RMD160 be4603717c8aaea6d6599f8936ba7a3b085a3da9 SHA1 6b170ec5764fdf757240c4b1abcb66b5064ca7a3 SHA256 8c060b10912adc7dcedabbd72b6668d0e4874786d78b79b0157a6fc4595ae6cc
+DIST freenet-r17217-snapshot.jar 2332830 RMD160 13876f8552b7dddd52bf7590163efcae9f42f5e1 SHA1 df940241f387c2d5ad61ba80841396f78814f43d SHA256 29467a356923477def6669b8561d9d96391c70ff70d92e5f178d472f9061fb0a
 DIST freenet07.tar.gz 380903 RMD160 216fc44016efa6a19291d74cb2a46cb005efbb86 SHA1 0d86e6516daeee9aec9b1a67eb06a3e8953ed3c6 SHA256 0c225694d4c3c81f62ac07fc5004196fbf7807b946dbed63740fdbc77f631513
-EBUILD freenet-bin-0.7.1101.ebuild 2351 RMD160 2cc3409ca8f6321423bcccd9c09874eb6e2da169 SHA1 70ebbe13bed7dd2ffa82d69ac4e7956534492de1 SHA256 677c419493632b59720bdfd6b9f01af82042619b643d34a4b6151e69ef1ac5d4
-MISC ChangeLog 5180 RMD160 6130b984d522cd1601c923fff7a48ba97ef8ab6e SHA1 565b69e67950d287911faabb4796ed79b19b5ae1 SHA256 79f970a48392cfe40bc476500b6025a57ccec8a36bab349326a1ca7820000fc9
+EBUILD freenet-bin-0.7.1103.ebuild 2351 RMD160 6310478a44dfae0dd0eda3cf58791db992cc0661 SHA1 9333b3e88ebbd2f92d7f8453b67433c1fe32ad95 SHA256 863cf5e04eb8f4dc7ca299f79b06adf140d23a2874ed77fd83e943143f3e17c4
+MISC ChangeLog 5308 RMD160 e67e40485598db5155b7db9f36b90d4ed69390e4 SHA1 8459a4ec4c1c082879cedf061788ad83dbe9af72 SHA256 34d6234dff813a1fde6add3a57e47dd4681a95fe3558d4decbfd0db01aca4c67
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
