@@ -1,5 +1,5 @@
 AUX freenet 416 RMD160 95efeda98fe723027c74729b03fd293ca29bdc7a SHA1 796d336341796d081454ebcc45248e90fffaed91 SHA256 d3b665e8d619d995ef9cb67ed4006c96bc4fdf80e6b7923247e022268ab8bae5
-DIST freenet-sources-v1101.tar.bz2 19221095 RMD160 a5c9a8a5c810793a9d0308b1757a33b140b9bac7 SHA1 033f1f48b403ad80f048d99a427afbdf8a474289 SHA256 34bc0da78fc63ae5ae1fcdf4668ef558c8befc2611be79a7524d09768b37f70b
-EBUILD freenet-0.7.1101.ebuild 1468 RMD160 81ab24b383238ab06da458821f4d1d5a6f88f1e6 SHA1 8b8ffc27aba6b40cb91c390fff627f1348f21709 SHA256 d39d9a56c54a5c9f5e9ecb60bc5e62eee544bcbc418ef590377122c1e85eca1d
-MISC ChangeLog 3572 RMD160 abbc2e7b04c7a1102776a4ac29f8f97fdf53c7a1 SHA1 f190873f9775778395af402e6aab5883fef08539 SHA256 b56dc0af3673c9422c5a47713932b8511c45fab3eef538df0ca7a26d207b7162
+DIST freenet-sources-v1103.tar.bz2 19219155 RMD160 3d35d93ae8e8286933fce05b4f8b5d8615978d02 SHA1 0a5b70d11aace7df6515d4f34a360aa0c7b8ce72 SHA256 4ae2c60c72dd2858d7e3069e5d186b6459a3e8c9081764d7ed3dfa2a0edc42a4
+EBUILD freenet-0.7.1103.ebuild 1446 RMD160 e5119b8f5e518fa61c6880165432eef3f0f9cbe1 SHA1 110dff72814e3db914c556b974a12bc830519d67 SHA256 5be60309d0bfe09d33dc711eac52ed4f31b6cdf469a888e94e5e4db64499eae1
+MISC ChangeLog 3692 RMD160 d2e41a399fb82b3ae1e2ed2833a6b4081954692d SHA1 c4ca0e673af48c7b3ed7c45893e5cba445b06d11 SHA256 30de7bf7d40a5970fa57fcaa1a1841d86119663c66f6d623c982660f61fcc1a5
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
