@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  25 Jan 2008; (Tommy[D]) tommy100@gmx.de -freenet-bin-0.7.1101.ebuild,
+  +freenet-bin-0.7.1103.ebuild:
+  New upstream release
+
   20 Jan 2008; (Tommy[D]) tommy100@gmx.de -freenet-bin-0.7.1100.ebuild,
   +freenet-bin-0.7.1101.ebuild:
   New upstream release
